@@ -1,3 +1,10 @@
+2004-02-11  Kevin Vandersloot
+
+	* callbacks.c: Fix bad free that may cause crashes. From
+	bug #134136. Thanks to Michael Wilson for pointing out
+	problem. Also fix freeing of gnome-icon-theme to not generate
+	errors
+
 2004-02-03  Paolo Borelli  <pborelli@katamail.com>
 
 	* callbacks.[ch] (cb_proc_combo_changed): new.
